# rust-app-version

./: LICENSE  README.md  action.yml  requirements.txt
.github/workflows/: test_and_merge.yml
rust_app_version/: get_version.py
rust_app_version/tests/: test_get_version.py
rust_app_version/tests/resources/: Cargo.toml
